Reconfigure Swagger integration. Regenerate API docs
