# api/swagger.json
@@ -1,30 +1,22 @@
-// Package docs GENERATED BY SWAG; DO NOT EDIT
-// This file was generated by swaggo/swag at
-// 2022-09-15 11:56:55.737680755 +0200 CEST m=+0.135609460
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "Array of tag-objects for request payload",
+        "title": "ClusterCockpit REST API",
         "termsOfService": "TODO",
         "contact": {
-            "name": "HPC-Support",
+            "name": "ClusterCockpit project",
             "url": "TODO",
-            "email": "hpc-support@fau.de"
+            "email": "support@clustercockpit.org"
         },
         "license": {
             "name": "MIT License",
             "url": "https://opensource.org/licenses/MIT"
         },
-        "version": "{{.Version}}"
+        "version": "0.1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "host": "localhost:8080",
+    "basePath": "/api",
     "paths": {
         "/jobs/": {
             "get": {
@@ -116,7 +108,7 @@ const docTemplate = `{
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "A new job started. The body should be in the ` + "`" + `meta.json` + "`" + ` format\nbut some fields required there are optional here (e.g. ` + "`" + `jobState` + "`" + ` defaults to \"running\").",
+                "description": "A new job started. The body should be in the `meta.json` format\nbut some fields required there are optional here (e.g. `jobState` defaults to \"running\").",
                 "consumes": [
                     "application/json"
                 ],
@@ -393,23 +385,6 @@ const docTemplate = `{
                 }
             }
         },
-        "api.TagJobApiRequest": {
-            "description": "Request to tag a job.",
-            "type": "array",
-            "items": {
-                "type": "object",
-                "properties": {
-                    "error": {
-                        "description": "Error Message",
-                        "type": "string"
-                    },
-                    "status": {
-                        "description": "Statustext of Errorcode",
-                        "type": "string"
-                    }
-                }
-            }
-        },
         "schema.Job": {
             "type": "object",
             "properties": {
@@ -533,20 +508,4 @@ const docTemplate = `{
             "in": "header"
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "0.1.0",
-	Host:             "clustercockpit.localhost:8082",
-	BasePath:         "/api",
-	Schemes:          []string{},
-	Title:            "ClusterCockpit REST API",
-	Description:      "API for batch job control.",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
